add discord link and favicons

--- a/index.html
+++ b/index.html
@@ -4,34 +4,46 @@
     <meta charset="utf-8">
     <title>38SOG</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <main>
+      <section>
       <h1>The 38th Special Operations Group</h1>
       <div id="logo">
         <img src="images/38sog.png" alt="The 38SOG logo." width=512 height=512 />
       </div>
-      <!-- link to discord goes here -->
+      <a href="https://discord.gg/y9EAqGsA3B">
+        <div id="discord">
+        <img src="https://discord.com/assets/145dc557845548a36a82337912ca3ac5.svg" alt="The Discord logo" />
+        <p>Interested to know more? Join our Discord!</p>
+        </div>
+      </a>
+      </section>
       <section id="about">
         <h2>Who We Are</h2>
         <div id="grid-about">
           <div>
-            <h3>Operations</h3>
-            <p>38SOG was formed to plan, coordinate, and execute large-scale,
-            collaborative, multi-clan operations. We aim to provide the right tools
-            to the right people in the right place at the right time.</p>
+            <h3>Anarchist</h3>
+            <p>38SOG is operated on a non-heirarchical consensus-based
+            governance model. There are no set leaders. Leadership in the field
+            is determined by present need and experience, rather than on fixed
+            roles.</p>
           </div>
           <div>
             <h3>Colonial</h3>
             <p>The Colonial Army prides itself on being welcoming and friendly.
-            38SOG is proud to be part of these efforts. As such, 38SOG is strictly
-            a Colonial group.</p>
+            38SOG is proud to be part of these efforts. As such, 38SOG is
+            strictly a Colonial group.</p>
           </div>
           <div>
-            <h3>Non-Heirarchical</h3>
-            <p>38SOG is operated on a non-heirarchical consensus-based governance
-            model.  There are no set leaders. Leadership in the field is determined
-            by present need and experience, rather than on fixed roles.</p>
+            <h3>Operations</h3>
+            <p>38SOG was formed to plan, coordinate, and execute large-scale,
+            collaborative, multi-clan operations. We aim to provide the right
+            tools to the right people in the right place at the right time.</p>
           </div>
         </div>
       </section>
