add new player training notice

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       <div id="logo">
         <img src="images/38sog.png" alt="The 38SOG logo." width=512 height=512 />
       </div>
+      <p class="notice">Here for a new player training? Join Discord with the 
+      link below and go to the <span class="mono">#public-schedule</span>
+      channel to RSVP. You need to RSVP so that we know how many people are 
+      going to show up!</p>
       <a href="https://discord.gg/y9EAqGsA3B">
         <div id="discord">
         <img src="https://discord.com/assets/145dc557845548a36a82337912ca3ac5.svg" alt="The Discord logo" />
