Add videos and joining sections

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
       <div id="logo">
         <img src="images/38sog.png" alt="The 38SOG logo." width=512 height=512 />
       </div>
-      <p class="notice">Here for a new player training? Join Discord with the 
+      <!-- uncomment if we're actively doing trainings:
+      <p class="notice">Here for a new player training? Join Discord with the
       link below and go to the <span class="mono">#public-schedule</span>
-      channel to RSVP. You need to RSVP so that we know how many people are 
+      channel to RSVP. You need to RSVP so that we know how many people are
       going to show up!</p>
-      <a href="https://discord.gg/y9EAqGsA3B">
-        <div id="discord">
-        <img src="https://discord.com/assets/145dc557845548a36a82337912ca3ac5.svg" alt="The Discord logo" />
+      -->
+      <a href="https://discord.gg/y9EAqGsA3B" id="discord">
+        <img src="images/discord.svg" alt="The Discord logo" />
         <p>Interested to know more? Join our Discord!</p>
         </div>
       </a>
@@ -53,7 +54,6 @@
       </section>
       <section id="whatwedo">
         <h2>What We Do</h2>
-
         <section>
           <h3>Observe - Advise - Mobilize</h3>
           <div class="infogrid">
@@ -93,7 +93,6 @@
           </div>
           </div>
         </section>
-
         <section>
           <h3>Small Unit Activities</h3>
           <p>38SOG isn't always trying to move the whole map. We spend a lot of
@@ -113,10 +112,103 @@
               and it shines in our anti-armor work. Anti-tank weapons don't do
               well against structures or enemy troops, but sitting and waiting
               for our chance to strike means we're in position when the enemy
-              finally makes their move.<p>
+              finally makes their move.</p>
             </div>
           </div>
         </section>
+        <section class="videolibrary">
+          <h3>Foxhole Tutorial Series</h3>
+          <p>38SOG produces a series of short tutorial videos explaining
+          important and non-obvious parts of the game. Check them out below.</p>
+          <div>
+            <h4>Reserve Stockpiles</h4>
+            <p>Reserve stockpiles allow players to keep resources and equipment
+            private and accessible only to people they choose. Using Reserve
+            Stockpiles avoids the problem of trying to hide materials in unsafe
+            places and hoping they won't get stolen. This tutorial shows all
+            you need to know about Reserve Stockpiles and how they are used.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IWrP0xbEj5Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div>
+            <h4>Technology</h4>
+            <p>A tutorial on the tech system, how it progresses, and how tech
+            choices are made.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/67VGHJx4OkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </section>
+      </section>
+      <section id="howtojoin">
+        <h2>How to Get Involved</h2>
+        <p>The 38th Special Operations Group is largely flat in its structure,
+        but there is a small heirarchy of roles that serves as an on-ramp for
+        new players. Here is how you get involved:</p>
+        <ol>
+          <li>
+            <h4>Join the Discord</h4>
+            <p>Join the 38SOG Discord using the link at the top of this page, and
+            give us a brief introduction to yourself in the
+            <span class="mono">#introductions</span> channel. Also, tell us how
+            you found out about us!</p>
+          </li>
+          <li>
+            <h4>Find the squad in-game</h4>
+            <p>38SOG's in-game presence mostly revolves around the in-game
+            squad. The squad allows us to have cross-region voice communications,
+            and allows us to see who is online. You only have to join the squad
+            once, and you'll stay in it even after you log out and log back in.</p>
+            <p>38SOG's squad is usually called either "38SOG" or "38SOG.club". If
+            you're having trouble finding it, ask on the Discord!</p>
+          </li>
+          <li>
+            <h4>Become a Recruit</h4>
+            <p>Once you join the squad, and someone with
+            <span class="mono">[38SOG]</span> tags sees you in-game, you'll be
+            given two roles on our discord: Colonial and Recruit. The Colonial
+            role gives you access to our low-security set of Discord channels,
+            which is where most of the discussion is. The Recruit role is so that
+            we can ping you when we schedule events or operations.</p>
+          </li>
+          <li>
+            <h4>Become an Auxiliary</h4>
+            <p>Keep playing with us! After a few days, once we get to know you,
+            you'll be given the Auxiliary role in Discord. This gives you
+            access to our higher-security Discord channels, including the
+            <span class="mono">#depot-codes</span> channel, which has our
+            Reserve Stockpile codes.</p>
+            <p>Auxiliaries are the bread and butter of 38SOG. Most people
+            involved in 38SOG will be Auxiliaries. Auxiliaries are welcome to
+            participate in our decision-making process and 
+          </li>
+          <li>
+            <h4>Get Tagged</h4>
+            <p>Joining the 38SOG regiment, and getting the
+            <span class="mono">[38SOG]</span> tag in your name is, for most
+            people, the fullest level of involvement. Getting tags tells the
+            world that you're part of 38SOG. We expect the
+            <span class="mono">[38SOG]</span> tag to carry with it a certain
+            positive reputation, but that reputation doesn't necessarily mean
+            "hundreds of hours of experience". Being a positive, helpful,
+            patient, and welcoming player is the most important thing you can
+            do.</p>
+            <p>After a couple of weeks of playing, once we trust you to
+            represent 38SOG with distinction, we will offer you tags. If you
+            feel like we've forgotten about you, feel free to make a request.
+            </p>
+          </li>
+          <li>
+            <h4>Become a Member</h4>
+            <p>Becoming what we call a "Capital-M Member" of 38SOG is the
+            highest level of involvement you can pursue. Being a Member is not
+            a privilege, it's a responsibility. It is not just being a part of
+            38SOG, it's taking ownership over the it. 38SOG Members are
+            collectively the final say on decisions made within the regiment.
+            Once you're a Member, it's hard to remove you, so requests for
+            Membership are taken very serious and require the very highest
+            level of trust.</p>
+            <p>Additionally, every Member of 38SOG has full administrator
+            privileges on the Discord. If you're having technical troubles in
+            Discord, a Member is who you want to talk to.</p>
+        </ol>
       </section>
     </main>
   </body>
