--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
         <h2>Who We Are</h2>
         <div id="grid-about">
           <div>
-            <h3>Anarchist</h3>
-            <p>38SOG is operated on a non-heirarchical consensus-based
-            governance model. There are no set leaders. Leadership in the field
-            is determined by present need and experience, rather than on fixed
-            roles.</p>
+            <h3>Ability over Rank</h3>
+            <p>38SOG and it's operations are run based on it's member's strengths, without a strict officer heirarchy.
+              We draw on each other's strengths to determine the best courses of action and shot callers in the field
+              of battle based on each member's experience.</p>
           </div>
           <div>
             <h3>Colonial</h3>
-            <p>The Colonial Army prides itself on being welcoming and friendly.
-            38SOG is proud to be part of these efforts. As such, 38SOG is
+            <p>The Colonial Army prides itself on being welcoming, friendly, and experienced.
+            38SOG is proud to be part of these efforts! As such, 38SOG is
             strictly a Colonial group.</p>
           </div>
           <div>
@@ -68,51 +67,50 @@
 
           <div>
             <h4>The Right People</h4>
-            <p>38SOG knows and works closely with outside players. Our most
-            successful operations never involve 38SOG going solo. Our strength
-            lies in inviting other players and clans to fill out the roles in
-            our operations, allowing us to be the fulcrum for a much larger
-            lever.
+            <p>38SOG prides itself on our coordination with other regiments. Our most
+            successful operations never involve 38SOG alone. Our strength
+            lies in our ability to coordinate with other players and regiments to successfully
+            leverage our collective strength to outsmart and outmanuver our shared Warden foe.
           </div>
 
           <div>
             <h4>The Right Place</h4>
-            <p>Scouting is key to any operation. It's the difference between
-            landing a ship on a watchtower-covered beach straight into
-            concrete, and crossing a quiet border to walk up to an undefend
-            town. 38SOG scouts to identify decayed defenses, unbuilt map
+            <p>Scouting is key to any operation! The difference between
+            landing a ship onto a watchtower-covered beach with heavily defended
+            concrete AI and crossing a quiet border to walk up to an undefend
+            town is one of our members with a pair of binoculars.
+            38SOG scouts to identify decayed defenses, unbuilt map
             sections, and targets of opportunity.
           </div>
 
           <div>
             <h4>The Right Time</h4>
-            <p>38SOG is primarily NA timezone, but has a substantial contingent
-            of Australian and Kiwi players. We plan our operations at least 24
-            hours in advance, to give everyone time to clear their schedule and
+            <p>38SOG is primarily operates in the very early to very late NA timezone, but shares
+             "handoffs" both to and from EU and AU/ASIA timezone ally regiments to ensure a smooth
+             tranistion in colonial operations. <br> 38SOG operations are scheduled at least 24
+            hours in advance to give everyone time to clear their schedule and
             be ready.
           </div>
           </div>
         </section>
         <section>
-          <h3>Small Unit Activities</h3>
-          <p>38SOG isn't always trying to move the whole map. We spend a lot of
+          <h3>Asymmetric warfare</h3>
+          <p>38SOG isn't always able to shift a front. We spend a lot of
           time on small-unit activities, especially those that reward patience
-          and preparation</p>
+          and preparation.</p>
           <div class="infogrid">
             <div>
               <h4>Artillery</h4>
-              <p>To shoot artillery in Foxhole is easy; to do it well is hard.
-              38SOG members bring patience and discipline to artillery fire
-              missions, in addition to hundreds of shells, allowing us to operate
-              effectively and continuously.</p>
+              <p>Coordinating artillery in Foxhole requires clairty in communication and prompt logistics; to do both well is our speciality.
+              38SOG members bring patience and discipline to artillery fire missions, and the support of our logistical capability
+              allows us to rain constant artillery fire on our enemy to devestating effect.</p>
             </div>
             <div>
               <h4>Anti-Armor</h4>
-              <p>Patience is a recurring theme in 38SOG's small unit gameplay,
-              and it shines in our anti-armor work. Anti-tank weapons don't do
-              well against structures or enemy troops, but sitting and waiting
-              for our chance to strike means we're in position when the enemy
-              finally makes their move.</p>
+              <p>The 68-45 “Smelter” Heavy Field Gun is the backbone of Colonial Tank Operations. Unwieldy at first glance, it's incredible
+              damage and range allows a skilled crew to inflict devestating damage to enemy tank lines at the fraction of the cost of tank.
+              38SOG crews excel at baiting enemy tank lines into decisive cannon fire, allowing friendly forces to destroy enemy structures
+              and advance the front.</p>
             </div>
           </div>
         </section>
