--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="grid-about">
           <div>
             <h3>Ability over Rank</h3>
-            <p>38SOG and it's operations are run based on it's member's strengths, without a strict officer heirarchy.
+            <p>38SOG and it's operations are run based on it's member's abilities, without a strict officer heirarchy.
               We draw on each other's strengths to determine the best courses of action and shot callers in the field
               of battle based on each member's experience.</p>
           </div>
