--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             rifles to respawns is prepared and delivered by players. The
             largest part of providing the right tools to the right people in
             the right place at the right time is having those tools to begin
-            with</p>
+            with, and we pride ourselves on our ability to deliver.</p>
           </div>
 
           <div>
@@ -87,7 +87,7 @@
             <h4>The Right Time</h4>
             <p>38SOG is primarily operates in the very early to very late NA timezone, but shares
              "handoffs" both to and from EU and AU/ASIA timezone ally regiments to ensure a smooth
-             tranistion in colonial operations. <br> 38SOG operations are scheduled at least 24
+             tranistion in colonial operations. <br> 38SOG regiment operations are scheduled at least 24
             hours in advance to give everyone time to clear their schedule and
             be ready.
           </div>
@@ -101,7 +101,7 @@
           <div class="infogrid">
             <div>
               <h4>Artillery</h4>
-              <p>Coordinating artillery in Foxhole requires clairty in communication and prompt logistics; to do both well is our speciality.
+              <p>Coordinating artillery in Foxhole requires clarity in communication and promptness in logistics; to do both well is our speciality.
               38SOG members bring patience and discipline to artillery fire missions, and the support of our logistical capability
               allows us to rain constant artillery fire on our enemy to devestating effect.</p>
             </div>
