--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div id="grid-about">
           <div>
             <h3>Ability over Rank</h3>
-            <p>38SOG and it's operations are run based on it's member's abilities, without a strict officer heirarchy.
-              We draw on each other's strengths to determine the best courses of action and shot callers in the field
-              of battle based on each member's experience.</p>
+            <p>38SOG and it's operations are run based on it's member's abilities without a strict officer heirarchy.
+              We draw on each other's strengths to determine who should call the shots and the best course of action
+              in the field of battle based on each member's experience.</p>
           </div>
           <div>
             <h3>Colonial</h3>
