--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
           <div>
             <h4>The Right Place</h4>
             <p>Scouting is key to any operation! The difference between
-            landing a ship onto a watchtower-covered beach with heavily defended
-            concrete AI and crossing a quiet border to walk up to an undefend
+            landing a ship onto a watchtower-covered beach with heavily defended AI
+             and crossing a quiet border to walk up to an undefend
             town is one of our members with a pair of binoculars.
             38SOG scouts to identify decayed defenses, unbuilt map
             sections, and targets of opportunity.
