--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h4>The Right Place</h4>
             <p>Scouting is key to any operation! The difference between
             landing a ship onto a watchtower-covered beach with heavily defended AI
-             and crossing a quiet border to walk up to an undefend
+             and crossing a quiet border to an undefend
             town is one of our members with a pair of binoculars.
             38SOG scouts to identify decayed defenses, unbuilt map
             sections, and targets of opportunity.
