--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div>
             <h4>The Right Time</h4>
             <p>38SOG is primarily operates in the very early to very late NA timezone, but shares
-             "handoffs" both to and from EU and AU/ASIA timezone ally regiments to ensure a smooth
+             "handoffs" with allied regiments to ensure a smooth
              tranistion in colonial operations. <br> 38SOG regiment operations are scheduled at least 24
             hours in advance to give everyone time to clear their schedule and
             be ready.
