--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           <div>
             <h4>The Right Tools</h4>
             <p>Logistics is the backbone of Foxhole. Everything from tanks to
-            rifles to respawns is prepared and delivered by players. The
+            rifles to respawns are prepared and delivered by players. The
             largest part of providing the right tools to the right people in
-            the right place at the right time is having those tools to begin
-            with, and we pride ourselves on our ability to deliver.</p>
+            the right place at the right time is having the material available,
+            and we pride ourselves on our ability to deliver.</p>
           </div>
 
           <div>
