--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
           <div>
             <h4>The Right Time</h4>
             <p>38SOG is primarily operates in the very early to very late NA timezone, but shares
-             "handoffs" with allied regiments to ensure a smooth
-             tranistion in colonial operations. <br> 38SOG regiment operations are scheduled at least 24
+             "handoffs" with allied regiments to ensure smooth
+             tranistions in colonial operations. <br> 38SOG regiment operations are scheduled at least 24
             hours in advance to give everyone time to clear their schedule and
             be ready.
           </div>
