--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="grid-about">
           <div>
             <h3>Ability over Rank</h3>
-            <p>38SOG and it's operations are run based on it's member's abilities without a strict officer heirarchy.
+            <p>38SOG and it's operations are run based on it's member's abilities without a strict officer heirarchy. <br/>
               We draw on each other's strengths to determine who should call the shots and find the best course of action
               in the field of battle based on each member's experience.</p>
           </div>
