--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div>
             <h3>Colonial</h3>
-            <p>The Colonial Army prides itself on being welcoming, friendly, and experienced.
+            <p>The Colonial Army prides itself on being welcoming, friendly, and experienced. <br/>
             38SOG is proud to be part of these efforts! As such, 38SOG is
             strictly a Colonial group.</p>
           </div>
@@ -77,7 +77,7 @@
             <h4>The Right Place</h4>
             <p>Scouting is key to any operation! The difference between
             landing a ship onto a watchtower-covered beach with heavily defended AI
-             and crossing a quiet border to an undefend
+             and crossing a quiet border to an undefended
             town is one of our members with a pair of binoculars.
             38SOG scouts to identify decayed defenses, unbuilt map
             sections, and targets of opportunity.
@@ -85,7 +85,7 @@
 
           <div>
             <h4>The Right Time</h4>
-            <p>38SOG is primarily operates in the very early to very late NA timezone, but shares
+            <p>38SOG primarily operates in the very early to very late NA timezone, but shares
              "handoffs" with allied regiments to ensure smooth
              tranistions in colonial operations. <br> 38SOG regiment operations are scheduled at least 24
             hours in advance to give everyone time to clear their schedule and
