--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           <div>
             <h4>The Right People</h4>
-            <p>38SOG prides itself on our coordination with other regiments. Our most
+            <p>38SOG prides itself in our coordination with other regiments. Our most
             successful operations never involve 38SOG alone. Our strength
             lies in our ability to coordinate with other players and regiments to successfully
             leverage our collective strength to outsmart and outmanuver our shared Warden foe.
