--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h4>The Right Time</h4>
             <p>38SOG primarily operates in the very early to very late NA timezone, but shares
              "handoffs" with allied regiments to ensure smooth
-             tranistions in colonial operations. <br> 38SOG regiment operations are scheduled at least 24
+             tranistions in colonial operations. 38SOG regiment operations are scheduled at least 24
             hours in advance to give everyone time to clear their schedule and
             be ready.
           </div>
