--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             <div>
               <h4>Anti-Armor</h4>
               <p>The 68-45 “Smelter” Heavy Field Gun is the backbone of Colonial Tank Operations. Unwieldy at first glance, it's incredible
-              damage and range allows a skilled crew to inflict devestating damage to enemy tank lines at the fraction of the cost of tank.
-              38SOG crews excel at baiting enemy tank lines into decisive cannon fire, allowing friendly forces to destroy enemy structures
+              damage and range allows a skilled crew to inflict decisive blows to enemy tank lines at the fraction of the cost of tank.
+              38SOG crews excel at baiting enemy tank lines into devestating cannon fire, allowing friendly forces to destroy enemy structures
               and advance the front.</p>
             </div>
           </div>
