--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         </section>
         <section class="videolibrary">
           <h3>Foxhole Tutorial Series</h3>
-          <p>38SOG produces a series of short tutorial videos explaining
-          important and non-obvious parts of the game. Check them out below.</p>
+          <p>38SOG produces short tutorial videos detailing
+          vital and less obvious aspects of the game. Check them out below:</p>
           <div>
             <h4>Reserve Stockpiles</h4>
             <p>Reserve stockpiles allow players to keep resources and equipment
