--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div>
             <h3>Ability over Rank</h3>
             <p>38SOG and its operations are run based on its member's abilities without a strict officer heirarchy. 
-              We draw on each other's strengths to determine who should call the shots and find the best course of action
+              Drawing upon on each other's strengths, we determine who should call the shots and find the best course of action
               in the field of battle based on each member's experience.</p>
           </div>
           <div>
