good morning. hit the yes button. i am good at prose. click accept (#1)
Update index.html

--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
         <h2>Who We Are</h2>
         <div id="grid-about">
           <div>
-            <h3>Anarchist</h3>
-            <p>38SOG is operated on a non-heirarchical consensus-based
-            governance model. There are no set leaders. Leadership in the field
-            is determined by present need and experience, rather than on fixed
-            roles.</p>
+            <h3>Ability over Rank</h3>
+            <p>38SOG and its operations are run based on its member's abilities without a strict officer heirarchy. 
+              Drawing upon on each other's strengths, we determine who should call the shots and find the best course of action
+              in the field of battle based on each member's experience.</p>
           </div>
           <div>
             <h3>Colonial</h3>
-            <p>The Colonial Army prides itself on being welcoming and friendly.
-            38SOG is proud to be part of these efforts. As such, 38SOG is
+            <p>The Colonial Army prides itself on being welcoming, friendly, and experienced. <br/>
+            38SOG is proud to be part of these efforts! As such, 38SOG is
             strictly a Colonial group.</p>
           </div>
           <div>
@@ -60,66 +59,65 @@
           <div>
             <h4>The Right Tools</h4>
             <p>Logistics is the backbone of Foxhole. Everything from tanks to
-            rifles to respawns is prepared and delivered by players. The
+            rifles to respawns are prepared and delivered by players. The
             largest part of providing the right tools to the right people in
-            the right place at the right time is having those tools to begin
-            with</p>
+            the right place at the right time is having the material available,
+            and we pride ourselves on our ability to deliver.</p>
           </div>
 
           <div>
             <h4>The Right People</h4>
-            <p>38SOG knows and works closely with outside players. Our most
-            successful operations never involve 38SOG going solo. Our strength
-            lies in inviting other players and clans to fill out the roles in
-            our operations, allowing us to be the fulcrum for a much larger
-            lever.
+            <p>38SOG prides itself in our coordination with other regiments. Our most
+            successful operations never involve 38SOG alone. Our strength
+            lies in our ability to coordinate with other players and regiments to successfully
+            leverage our collective strength to outsmart and outmanuver our shared Warden foe.
           </div>
 
           <div>
             <h4>The Right Place</h4>
-            <p>Scouting is key to any operation. It's the difference between
-            landing a ship on a watchtower-covered beach straight into
-            concrete, and crossing a quiet border to walk up to an undefend
-            town. 38SOG scouts to identify decayed defenses, unbuilt map
+            <p>Scouting is key to any operation! The difference between
+            landing a ship onto a watchtower-covered beach with heavily defended AI
+             and crossing a quiet border to an undefended
+            town is one of our members with a pair of binoculars.
+            38SOG scouts to identify decayed defenses, unbuilt map
             sections, and targets of opportunity.
           </div>
 
           <div>
             <h4>The Right Time</h4>
-            <p>38SOG is primarily NA timezone, but has a substantial contingent
-            of Australian and Kiwi players. We plan our operations at least 24
-            hours in advance, to give everyone time to clear their schedule and
+            <p>38SOG primarily operates in the very early to very late NA timezone, but shares
+             "handoffs" with allied regiments to ensure smooth
+             tranistions in colonial operations. 38SOG regiment operations are scheduled at least 24
+            hours in advance to give everyone time to clear their schedule and
             be ready.
           </div>
           </div>
         </section>
         <section>
-          <h3>Small Unit Activities</h3>
-          <p>38SOG isn't always trying to move the whole map. We spend a lot of
+          <h3>Asymmetric warfare</h3>
+          <p>38SOG isn't always able to shift a front. We spend a lot of
           time on small-unit activities, especially those that reward patience
-          and preparation</p>
+          and preparation.</p>
           <div class="infogrid">
             <div>
               <h4>Artillery</h4>
-              <p>To shoot artillery in Foxhole is easy; to do it well is hard.
-              38SOG members bring patience and discipline to artillery fire
-              missions, in addition to hundreds of shells, allowing us to operate
-              effectively and continuously.</p>
+              <p>Coordinating artillery in Foxhole requires clarity in communication and promptness in logistics; to do both well is our speciality.
+              38SOG members bring patience and discipline to artillery fire missions, and the support of our logistical capability
+              allows us to rain constant artillery fire on our enemy to devestating effect.</p>
             </div>
             <div>
               <h4>Anti-Armor</h4>
-              <p>Patience is a recurring theme in 38SOG's small unit gameplay,
-              and it shines in our anti-armor work. Anti-tank weapons don't do
-              well against structures or enemy troops, but sitting and waiting
-              for our chance to strike means we're in position when the enemy
-              finally makes their move.</p>
+              <p>The 68-45 “Smelter” Heavy Field Gun is the backbone of Colonial Tank Operations. Unwieldy at first glance, it's incredible
+              damage and range allows a skilled crew to inflict decisive blows to enemy tank lines at the fraction of the cost of tank.
+              38SOG crews excel at baiting enemy tank lines into devestating cannon fire, allowing friendly forces to destroy enemy structures
+              and advance the front.</p>
             </div>
           </div>
         </section>
         <section class="videolibrary">
           <h3>Foxhole Tutorial Series</h3>
-          <p>38SOG produces a series of short tutorial videos explaining
-          important and non-obvious parts of the game. Check them out below.</p>
+          <p>38SOG produces short tutorial videos detailing
+          vital and less obvious aspects of the game. Check them out below:</p>
           <div>
             <h4>Reserve Stockpiles</h4>
             <p>Reserve stockpiles allow players to keep resources and equipment
